# Rustemp

./: Cargo.toml  license  readME.md  test.txt
src/: main.rs
