[package]
name = "rustemp-cpu"
description = "CLI tool to see your live CPU temperature for linux"
version = "0.1.0"
edition = "2024"

[dependencies]
termion = "4.0.4"

[package.metadata.deb]
maintainer = "Mani Sohi <mani.ehsanisohi@gmail.com>"
copyright = "2025 Mani Sohi"
license-file = ["license"]
assets = [["target/release/rustemp-cpu", "usr/bin/", "755"]]
