[package]
name = "rustemp"
description = "CLI tool to see your live CPU temperature for linux"
version = "0.1.1"
edition = "2024"
license = "MIT"

[package.metadata.deb]
maintainer = "Mani Sohi <mani.ehsanisohi@gmail.com>"
copyright = "2025 Mani Sohi"
license-file = ["license"]
assets = [["target/release/rustemp", "usr/bin/", "755"]]
